Mon Jun 11 21:45:19 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * NEWS:
        * ace/config-lite.h:
        * include/makeinclude/platform_sunos5_sunc++.GNU:

          Added support for Oracle Solaris Studio 12 Update 3 (SunCC 5.12).

Mon Jun 11 17:05:36 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          Added option -d to run OpenDDS tests also

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Also check OpenDDS lst files

Thu Jun  7 10:13:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Thread_Mutex.h:
        * ace/Dynamic_Message_Strategy.h:
        * ace/Message_Queue.h:
        * ace/Metrics_Cache_T.h:
          Doxygen fixes

Wed Jun  6 14:46:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XSCRT/Traversal.hpp:
        * ace/XML_Utils/XSCRT/Traversal.tpp:
          Readded tpp file, shouldn't have been deleted

Wed Jun  6 13:09:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XMLSchema/Traversal.hpp:
        * ace/XML_Utils/XMLSchema/Types.hpp:
        * ace/XML_Utils/XMLSchema/Writer.hpp:
        * ace/XML_Utils/XSCRT/Elements.hpp:
        * ace/XML_Utils/XSCRT/Parser.hpp:
        * ace/XML_Utils/XSCRT/Traversal.hpp:
        * ace/XML_Utils/XSCRT/Writer.hpp:
        * ace/XML_Utils/XSCRT/XML.hpp:
          Removed includes

        * ace/XML_Utils/XMLSchema/Traversal.tpp:
        * ace/XML_Utils/XMLSchema/Types.tpp:
        * ace/XML_Utils/XMLSchema/Writer.tpp:
        * ace/XML_Utils/XSCRT/Elements.tpp:
        * ace/XML_Utils/XSCRT/Parser.tpp:
        * ace/XML_Utils/XSCRT/Traversal.tpp:
        * ace/XML_Utils/XSCRT/Writer.tpp:
        * ace/XML_Utils/XSCRT/XML.tpp:
          Removed these files.

Wed Jun  6 10:27:33 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XML.mpc:
          Install fixes

Wed Jun  6 08:12:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
