@@ -909,6 +909,7 @@ def generate_workspaces (stage_dir):
     # Create option strings
     mpc_command = os.path.join (stage_dir, "ACE_wrappers", "bin", "mwc.pl")
     exclude_option = ' -exclude TAO/TAO_*.mwc,TAO/CIAO/CIAO_*.mwc '
+    msvc_exclude_option = ' -exclude TAO/CIAO/CIAO_*_OpenDDS.mwc '
     workers_option = ' -workers ' + str(cpu_count)
     mpc_option = ' -recurse -hierarchy -relative ACE_ROOT=' + stage_dir + '/ACE_wrappers '
     mpc_option += ' -relative TAO_ROOT=' + stage_dir + '/ACE_wrappers/TAO '
@@ -926,10 +927,10 @@ def generate_workspaces (stage_dir):
     ex (mpc_command + " -type gnuace " + exclude_option + workers_option + mpc_option + redirect_option)
 
     print "\tGenerating VC10 solutions..."
-    ex (mpc_command + " -type vc10 " + mpc_option + workers_option + vc10_option + redirect_option)
+    ex (mpc_command + " -type vc10 " + msvc_exclude_option + mpc_option + workers_option + vc10_option + redirect_option)
 
     print "\tGenerating VC9 solutions..."
-    ex (mpc_command + " -type vc9 " + mpc_option + workers_option + vc9_option + redirect_option)
+    ex (mpc_command + " -type vc9 " + msvc_exclude_option + mpc_option + workers_option + vc9_option + redirect_option)
 
     print "\tCorrecting permissions for all generated files..."
     ex ("find ./ -name '*.vc[p,w]' -or -name '*.bmak' -or -name '*.vcproj' -or -name '*.sln' -or -name '*.vcxproj' -or -name '*.filters' -or -name 'GNUmake*' | xargs chmod 0644")
